force-app/main/default/objects/MassiveLoaderRequest__c/MassiveLoaderRequest__c.object-meta.xml
<CustomObject>
    <label>Esito Caricamento</label>
    <nameField>
        <displayFormat>MLR-{00000000}</displayFormat>
        <label>Id Pratica</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Esito Caricamenti</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>