force-app/main/default/objects/MassiveLoaderRequest__c/fields/EndDateTime__c.field-meta.xml
<CustomField>
    <fullName>EndDateTime__c</fullName>
    <label>Fine caricamento</label>
    <type>DateTime</type>
</CustomField>