force-app/main/default/objects/MassiveLoaderRequest__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Fase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File non processato</fullName>
            </value>
            <value>
                <fullName>File in elaborazione</fullName>
            </value>
            <value>
                <fullName>File processato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>