force-app/main/default/objects/MassiveLoaderRequest__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priorità</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>