force-app/main/default/objects/MassiveLoaderRequest__c/fields/ProcessType__c.field-meta.xml
<CustomField>
    <fullName>ProcessType__c</fullName>
    <label>Processo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SwitchIn</fullName>
                <label>Switch In</label>
            </value>
            <value>
                <fullName>Subentro</fullName>
            </value>
            <value>
                <fullName>Disattivazioni</fullName>
            </value>
            <value>
                <fullName>Morosita</fullName>
                <label>Morosità</label>
            </value>
            <value>
                <fullName>VolturaTecnica</fullName>
                <label>Voltura Tecnica</label>
            </value>
            <value>
                <fullName>ModificheAnagrafiche</fullName>
                <label>Modifiche Anagrafiche</label>
            </value>
            <value>
                <fullName>Variazioni</fullName>
            </value>
            <value>
                <fullName>Subentro su Gdm Chiuso</fullName>
            </value>
            <value>
                <fullName>Prima Attivazione</fullName>
            </value>
            <value>
                <fullName>Voltura</fullName>
            </value>
            <value>
                <fullName>Nuovi Bonus e VAS</fullName>
            </value>
            <value>
                <fullName>Cambio uso</fullName>
                <label>CambioUso</label>
            </value>
            <value>
                <fullName>Cambio offerta</fullName>
            </value>
            <value>
                <fullName>Tariffe e Sconti</fullName>
            </value>
            <value>
                <fullName>CaricamentoCGC</fullName>
                <label>Caricamento CGC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>