force-app/main/default/objects/MassiveLoaderRequest__c/fields/RequestOK__c.field-meta.xml
<CustomField>
    <fullName>RequestOK__c</fullName>
    <label>Numero Pratiche Con Esito Positivo</label>
    <summaryFilterItems>
        <field>MassiveLoaderRequestRequestItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Chiuso</value>
    </summaryFilterItems>
    <summaryForeignKey>MassiveLoaderRequestRequestItem__c.MassiveLoaderRequest__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>