force-app/main/default/objects/MassiveLoaderRequest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Stato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Lavorazione</fullName>
            </value>
            <value>
                <fullName>Chiuso</fullName>
            </value>
            <value>
                <fullName>In attesa di lavorazione</fullName>
            </value>
            <value>
                <fullName>Pronto A Partire</fullName>
                <isActive>false</isActive>
                <label>Pronto A Partire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>