force-app/main/default/objects/MassiveLoaderRequest__c/fields/TotalRequest__c.field-meta.xml
<CustomField>
    <fullName>TotalRequest__c</fullName>
    <label>Numero Pratiche</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>