force-app/main/default/objects/MassiveLoaderRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProcessType__c</columns>
    <columns>Status__c</columns>
    <columns>TotalRequest__c</columns>
    <columns>StartDateTime__c</columns>
    <columns>EndDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>