force-app/main/default/objects/MassiveLoaderRequest__c/listViews/Richieste_Recenti.listView-meta.xml
<ListView>
    <fullName>Richieste_Recenti</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>ProcessType__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Richieste Recenti</label>
</ListView>